--- a/public/wp-content/themes/Nina/templates/index.twig
+++ b/public/wp-content/themes/Nina/templates/index.twig
@@ -12,7 +12,7 @@
 		<div class="news-image"><img src="{{ post.thumbnail.src }}" alt="Image for {{ post.title }}"></div>
 		<div class="news-content">
 			<h4>{{ post.title }}</h4>
-			<p>{{ post.content}}</p>
+			    {{ post.content}}
 		</div>
 	</div>
 	{% endfor %}
@@ -26,7 +26,7 @@
     </div>
 	<article>
         <div id="text">
-            <p>{{ post.content}}</p>
+            {{ post.content}}
         </div>
         <div id="image">
             <img src="{{ post.thumbnail.src }}" alt="Image for {{ post.title }}">
@@ -40,7 +40,7 @@
         <h3>{{ post.title }}</h3>
         <div class="underscore"></div>
 </div>
-    <p>{{ post.content}}</p>
+    {{ post.content}}
 {% endfor %}
 </section>
 {% endblock %}
